# deepl

./: flake.nix  pyproject.toml
src/: main.py  translate.py
src/deepl/: main.py
